msdk: Don't release mfx surface in release_buffer() vmethod

It is possible that two different GstBuffers share the same GstMemory,
so the same mfx surface is shared too.

This fixes https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/-/issues/1516